fix: make icons stretch across the pane

--- a/src/main/resources/stylesheets/Icons.css
+++ b/src/main/resources/stylesheets/Icons.css
@@ -1,8 +1,8 @@
 #trophy-icon{
     -fx-background-image: url('/pictures/icons/trophy_icon.png') center no-repeat;
-    -fx-background-size : cover;
+    -fx-background-size : stretch;
 }
 #white-flag-icon{
     -fx-background-image: url('/pictures/icons/White_flag.png') center no-repeat;
-    -fx-background-size : cover;
+    -fx-background-size : stretch;
 }
